# Webton-TopicDiscover

./: .coverage  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
backend/: app.py  utils.py
docs/: einleitung.md  extras_tipps_ressourcen.md  installation_und_setup.md  niechen_&_keywords.md  projektstrategie.md  step-by-step-Anleitung.md
frontend/: streamlit_prototype.py
tests/backend/: conftest.py
tests/backend/integration/: test_app.py
tests/backend/unit/: __init__.py  test_utils.py
